Modify gradle build
Signed-off-by: Joshua Castle <26531652+Kas-tle@users.noreply.github.com>